// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cameraUtils getCameraSettings should return default position and camera basics 1`] = `
Object {
  "cameraType": "Perspective",
  "far": 500,
  "fov": 45,
  "near": 0.2,
  "transform": Object {
    "position": Array [
      5,
      5,
      5,
    ],
  },
  "zoom": 1,
}
`;

exports[`cameraUtils getCameraSettings should return defaults 1`] = `
Object {
  "cameraType": "Perspective",
  "far": 1000,
  "fov": 53.13,
  "near": 0.1,
  "transform": Object {
    "position": Array [
      5,
      5,
      5,
    ],
  },
  "zoom": 1,
}
`;

exports[`cameraUtils getCameraSettings should return object3D world coordinates and camera basics if provided 1`] = `
Object {
  "cameraType": "Perspective",
  "far": 500,
  "fov": 45,
  "near": 0.2,
  "transform": Object {
    "position": Array [
      5,
      5,
      5,
    ],
    "rotation": Array [
      -0,
      0,
      -0,
    ],
    "scale": Array [
      1,
      1,
      1,
    ],
  },
  "zoom": 1,
}
`;

exports[`cameraUtils getCameraSettings should return object3D world coordinates and camera component if provided 1`] = `
Object {
  "cameraType": "Perspective",
  "far": 500,
  "fov": 45,
  "near": 0.2,
  "transform": Object {
    "position": Array [
      5,
      5,
      5,
    ],
    "rotation": Array [
      -0,
      0,
      -0,
    ],
    "scale": Array [
      1,
      1,
      1,
    ],
  },
  "zoom": 1,
}
`;

exports[`cameraUtils getCameraSettings should return object3D world coordinates and default camera settings 1`] = `
Object {
  "cameraType": "Perspective",
  "far": 1000,
  "fov": 53.13,
  "near": 0.1,
  "transform": Object {
    "position": Array [
      5,
      5,
      5,
    ],
    "rotation": Array [
      -0,
      0,
      -0,
    ],
    "scale": Array [
      1,
      1,
      1,
    ],
  },
  "zoom": 1,
}
`;
